--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <button class="btn"></button>
                     
                 </div>
-                <div id="progress-bar"><div></div></div>
+                <div id="progress-bar"><div id="progress">&nbsp</div></div>
                 <div><button id="button1">Click me</button><button id="button4">Show All</button></div>
                 <div id="showcreation">
 
